--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -240,10 +240,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>mean_error</th>\n",
-       "      <th>variance_error</th>\n",
-       "      <th>mean_absolute_error</th>\n",
-       "      <th>rmse</th>\n",
+       "      <th>Mean Error</th>\n",
+       "      <th>Variance of Error</th>\n",
+       "      <th>Mean Absolute Error</th>\n",
+       "      <th>RMSE</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>model</th>\n",
@@ -255,18 +255,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>gpt-3.5-turbo</th>\n",
-       "      <td>0.007275</td>\n",
-       "      <td>0.965954</td>\n",
-       "      <td>0.812442</td>\n",
-       "      <td>0.982739</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>gpt-4o</th>\n",
-       "      <td>0.345557</td>\n",
-       "      <td>0.546063</td>\n",
-       "      <td>0.588107</td>\n",
-       "      <td>0.815683</td>\n",
+       "      <th>llama-3.1-70b-versatile</th>\n",
+       "      <td>-0.029617</td>\n",
+       "      <td>0.502977</td>\n",
+       "      <td>0.561255</td>\n",
+       "      <td>0.709710</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>gpt-4o-mini</th>\n",
@@ -276,18 +269,11 @@
        "      <td>0.756354</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>groq/gemma2-9b-it</th>\n",
-       "      <td>-0.423032</td>\n",
-       "      <td>0.742196</td>\n",
-       "      <td>0.779581</td>\n",
-       "      <td>0.959662</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>groq/llama-3.1-70b-versatile</th>\n",
-       "      <td>-0.029617</td>\n",
-       "      <td>0.502977</td>\n",
-       "      <td>0.561255</td>\n",
-       "      <td>0.709710</td>\n",
+       "      <th>gpt-4o</th>\n",
+       "      <td>0.345557</td>\n",
+       "      <td>0.546063</td>\n",
+       "      <td>0.588107</td>\n",
+       "      <td>0.815683</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>llama-3.1-8b</th>\n",
@@ -295,6 +281,20 @@
        "      <td>0.793188</td>\n",
        "      <td>0.732015</td>\n",
        "      <td>0.923606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gemma2-9b-it</th>\n",
+       "      <td>-0.423032</td>\n",
+       "      <td>0.742196</td>\n",
+       "      <td>0.779581</td>\n",
+       "      <td>0.959662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gpt-3.5-turbo</th>\n",
+       "      <td>0.007275</td>\n",
+       "      <td>0.965954</td>\n",
+       "      <td>0.812442</td>\n",
+       "      <td>0.982739</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mixtral-8x7b</th>\n",
@@ -308,28 +308,28 @@
        "</div>"
       ],
       "text/plain": [
-       "                              mean_error  variance_error  mean_absolute_error  \\\n",
-       "model                                                                           \n",
-       "gpt-3.5-turbo                   0.007275        0.965954             0.812442   \n",
-       "gpt-4o                          0.345557        0.546063             0.588107   \n",
-       "gpt-4o-mini                    -0.026508        0.571514             0.566625   \n",
-       "groq/gemma2-9b-it              -0.423032        0.742196             0.779581   \n",
-       "groq/llama-3.1-70b-versatile   -0.029617        0.502977             0.561255   \n",
-       "llama-3.1-8b                   -0.245174        0.793188             0.732015   \n",
-       "mixtral-8x7b                   -0.697935        0.724766             0.878256   \n",
+       "                         Mean Error  Variance of Error  Mean Absolute Error  \\\n",
+       "model                                                                         \n",
+       "llama-3.1-70b-versatile   -0.029617           0.502977             0.561255   \n",
+       "gpt-4o-mini               -0.026508           0.571514             0.566625   \n",
+       "gpt-4o                     0.345557           0.546063             0.588107   \n",
+       "llama-3.1-8b              -0.245174           0.793188             0.732015   \n",
+       "gemma2-9b-it              -0.423032           0.742196             0.779581   \n",
+       "gpt-3.5-turbo              0.007275           0.965954             0.812442   \n",
+       "mixtral-8x7b              -0.697935           0.724766             0.878256   \n",
        "\n",
-       "                                  rmse  \n",
-       "model                                   \n",
-       "gpt-3.5-turbo                 0.982739  \n",
-       "gpt-4o                        0.815683  \n",
-       "gpt-4o-mini                   0.756354  \n",
-       "groq/gemma2-9b-it             0.959662  \n",
-       "groq/llama-3.1-70b-versatile  0.709710  \n",
-       "llama-3.1-8b                  0.923606  \n",
-       "mixtral-8x7b                  1.100761  "
+       "                             RMSE  \n",
+       "model                              \n",
+       "llama-3.1-70b-versatile  0.709710  \n",
+       "gpt-4o-mini              0.756354  \n",
+       "gpt-4o                   0.815683  \n",
+       "llama-3.1-8b             0.923606  \n",
+       "gemma2-9b-it             0.959662  \n",
+       "gpt-3.5-turbo            0.982739  \n",
+       "mixtral-8x7b             1.100761  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,8 +381,10 @@
     "    return calculate_metrics(data)\n",
     "\n",
     "file_path = 'data/results.csv'\n",
-    "metrics_df = main(file_path).drop(5).set_index('model')\n",
-    "metrics_df\n"
+    "metrics_df = main(file_path)\n",
+    "metrics_df['model'] = metrics_df['model'].str.replace('groq/', '')\n",
+    "metrics_df.columns = ['model', 'Mean Error', 'Variance of Error', 'Mean Absolute Error', 'RMSE']\n",
+    "metrics_df.drop(5).set_index('model').sort_values('RMSE')\n"
    ]
   },
   {
